# IT_Security_Agent

./: .clinerules  .gitignore  2026-07-13-week3-sbom-agent-design.md  README.md  condense_lockfile.py  pre-req.txt  pyproject.toml  scan_repo.py  serve.py  serve_mistral.py  warm_cache.py
.clinerules/: scan-repo.md
Project_Documentation/: project-documentation.md
docs/: project-documentation.md  walkthrough.md  week3-presentation-script.md
docs/superpowers/plans/: 2026-07-13-week3-sbom-agent.md
it_security_agent/: agent.py  cpe_dictionary.py  cwe.py  explain.py  generate_sbom.py  image_scan.py  kev.py  labeling.py  matching.py  mcp_server.py  model.py  normalize.py  nvd_cache.py  nvd_client.py  osv.py  registry.py  repo_scan.py  report.py  sbom.py  scan_repo.py  schema.py
notebooks/: week1_analysis.ipynb  week2_dependency_scan.ipynb  week3_agent.ipynb
presentation/: Omnic-Pitch-Deck.pptx  omnic-deck.html  spoken-script.md
tests/: test_agent.py  test_condense_lockfile.py  test_cpe_dictionary.py  test_cwe.py  test_explain.py  test_generate_sbom.py  test_image_scan.py  test_kev.py  test_labeling.py  test_matching.py  test_mcp_server.py  test_model.py  test_normalize.py  test_nvd_cache.py  test_nvd_client.py  test_offline_scan.py  test_osv.py  test_package_import.py  test_registry.py  test_repo_scan.py  test_report.py  test_sbom.py  test_schema.py  test_warm_cache.py  test_weaknesses.py
tests/fixtures/: sample_cyclonedx.json  sample_package-lock.json  sample_spdx.json  sample_syft_cyclonedx.json
(+1 files in other folders)
