[project]
name = "it-security-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.3.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "nbformat>=5.10.4",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "shap>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["it_security_agent"]
